# llm_product_recommendation

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  report.html  requirements.txt
data/: co_occurrences.xlsx  products.json
llm/: llm.py  llm_evaluation.json  neo4j_utils.py  report.py  templates.py  utilities.py
setup_scripts/: initial_script.sh  load_products_new.py
