[project]
name = "challenge-jta"
version = "0.1.0"
description = "A product recommendation system"
authors = [
    {name = "Pedro Diogo",email = "pedro.m.diogo@tecnico.ulisboa.pt"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "langchain-neo4j (>=0.4.0,<0.5.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "termcolor (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
